; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/commands/extr_lockcmds.c_LockTableAclCheck.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/commands/extr_lockcmds.c_LockTableAclCheck.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AccessShareLock = common dso_local global i64 0, align 8
@ACL_SELECT = common dso_local global i32 0, align 4
@RowExclusiveLock = common dso_local global i64 0, align 8
@ACL_INSERT = common dso_local global i32 0, align 4
@ACL_UPDATE = common dso_local global i32 0, align 4
@ACL_DELETE = common dso_local global i32 0, align 4
@ACL_TRUNCATE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i64, i32)* @LockTableAclCheck to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @LockTableAclCheck(i32 %0, i64 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i64 %1, i64* %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load i64, i64* %5, align 8
  %10 = load i64, i64* @AccessShareLock, align 8
  %11 = icmp eq i64 %9, %10
  br i1 %11, label %12, label %14

12:                                               ; preds = %3
  %13 = load i32, i32* @ACL_SELECT, align 4
  store i32 %13, i32* %8, align 4
  br label %33

14:                                               ; preds = %3
  %15 = load i64, i64* %5, align 8
  %16 = load i64, i64* @RowExclusiveLock, align 8
  %17 = icmp eq i64 %15, %16
  br i1 %17, label %18, label %26

18:                                               ; preds = %14
  %19 = load i32, i32* @ACL_INSERT, align 4
  %20 = load i32, i32* @ACL_UPDATE, align 4
  %21 = or i32 %19, %20
  %22 = load i32, i32* @ACL_DELETE, align 4
  %23 = or i32 %21, %22
  %24 = load i32, i32* @ACL_TRUNCATE, align 4
  %25 = or i32 %23, %24
  store i32 %25, i32* %8, align 4
  br label %32

26:                                               ; preds = %14
  %27 = load i32, i32* @ACL_UPDATE, align 4
  %28 = load i32, i32* @ACL_DELETE, align 4
  %29 = or i32 %27, %28
  %30 = load i32, i32* @ACL_TRUNCATE, align 4
  %31 = or i32 %29, %30
  store i32 %31, i32* %8, align 4
  br label %32

32:                                               ; preds = %26, %18
  br label %33

33:                                               ; preds = %32, %12
  %34 = load i32, i32* %4, align 4
  %35 = load i32, i32* %6, align 4
  %36 = load i32, i32* %8, align 4
  %37 = call i32 @pg_class_aclcheck(i32 %34, i32 %35, i32 %36)
  store i32 %37, i32* %7, align 4
  %38 = load i32, i32* %7, align 4
  ret i32 %38
}

declare dso_local i32 @pg_class_aclcheck(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
